--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /*GENERAL*/
 :root {
-  --main-color: #E44444; /* var(--main-color) */
-  --second-color: #CD487B; /* var(--second-color) */
-  --light-grey-color: #EDEDED; /* var(--light-grey-color) */
-  --drak-grey-color: #4B4B4B; /* var(--drak-grey-color) */
+  --main-color: #E44444;
+  --second-color: #CD487B;
+  --light-grey-color: #EDEDED;
+  --drak-grey-color: #4B4B4B;
 }
 
 body {
